--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
-    <string name="app_name">JSA Challenge</string>
+    <string name="app_name">Git User Repo List</string>
+    <string name="fetch_repos">Fetch Repos</string>
+    <string name="name">Name</string>
+    <string name="textView">TextView</string>
 </resources>
